third_party/move/move-compiler-v2/tests/acquires-checker/v1-tests/missing_acquire.exp

Diagnostics:
warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
   ┌─ tests/acquires-checker/v1-tests/missing_acquire.move:11:32
   │
11 │         R1{} = move_from<R1>(a);
   │                                ^


Diagnostics:
error: missing acquires annotation for `R1`
  ┌─ tests/acquires-checker/v1-tests/missing_acquire.move:5:9
  │
5 │     fun t1(a: address) acquires R2 {
  │         ^^
  ·
9 │         borrow_global<R1>(a);
  │         -------------------- acquired here
